fix(page-not-found): align items in host for better layout consistency

--- a/loja/src/app/components/page-not-found/page-not-found.component.scss
+++ b/loja/src/app/components/page-not-found/page-not-found.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: flex;
+  align-items: center;
   justify-content: center;
   height: 100svh;
   width: 100svw;
